[gd_scene load_steps=3 format=3 uid="uid://prayer_notice_001"]

[ext_resource type="Script" path="res://1.Codebase/src/scripts/ui/prayer_notice.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.15, 0.2, 0.3, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.8, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="PrayerNotice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.1, 0.18, 0.8)

[node name="MenuContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MenuContainer"]
custom_minimum_size = Vector2(640, 420)
layout_mode = 2
theme_override_styles/panel = SubResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_top = 28.0
offset_right = -28.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 22

[node name="TitleLabel" type="Label" parent="MenuContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Data Use Notice"
horizontal_alignment = 1

[node name="BodyText" type="RichTextLabel" parent="MenuContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
autowrap_mode = 3
fit_content = true
text = "[b]Before you submit a prayer[/b]\n\n• Your text may be sent to a third-party AI service when a cloud model is enabled.\n• The full request is also stored in local logs for debugging and evaluation.\n• Please avoid entering personal, sensitive, or identifying information.\n\nYou can delete stored logs anytime from the Settings menu."

[node name="Buttons" type="HBoxContainer" parent="MenuContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
alignment = 1
theme_override_constants/separation = 16

[node name="CancelButton" type="Button" parent="MenuContainer/Panel/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(220, 54)
layout_mode = 2
text = "Cancel"

[node name="AcceptButton" type="Button" parent="MenuContainer/Panel/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(220, 54)
layout_mode = 2
text = "I Understand"

[connection signal="pressed" from="MenuContainer/Panel/VBoxContainer/Buttons/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="MenuContainer/Panel/VBoxContainer/Buttons/AcceptButton" to="." method="_on_accept_button_pressed"]
